Simplify SlotMap
Get rid of our old hand-tuned EmbeddedSlotMap -- use all of HashMap's
features instead. Simplify the interface and also get rid of the old
SlotMapContainer. Ensure that there is only one map operation per
object property operation.